--- a/README
+++ b/README
@@ -12,3 +12,7 @@ script was adapt to take panes into account.
 If you use version of tmux < 1.3 , you should use the stable branch. The version
 available in that branch isn't aware of panes so it will paste to pane 0 of the
 window.
+
+
+Added :tt command to allow sending any command to a pane.
+
